<resources>
    <string name="app_name">Calculadora</string>
    <string name="radSomar">Somar</string>
    <string name="radSubtrair">Subtrair</string>
    <string name="radMultiplicar">Multiplicar</string>
    <string name="radDividir">Dividir</string>
    <string name="btnCalcular">Calcular</string>
    <string name="btnLimpar">Limpar</string>
    <string name="txtPrimeiroNumero">Primeiro Número:</string>
    <string name="txtSegundoNumero">Segundo Número:</string>
    <string name="txtResultado">Resultado:</string>
</resources>